{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 1052,
  "lineage": "c7970df5-9314-a369-fc6c-63775492d0ff",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:266735814394:loadbalancer/app/App-internal-load-balancer/2e0d5cbee1c1ff72",
            "arn_suffix": "app/App-internal-load-balancer/2e0d5cbee1c1ff72",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "App-internal-load-balancer-152587775.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:266735814394:loadbalancer/app/App-internal-load-balancer/2e0d5cbee1c1ff72",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "App-internal-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00b7454e56d0919c8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-018c55fd353f2a403"
              },
              {
                "subnet_id": "subnet-0352648d35806d5e0"
              }
            ],
            "subnets": [
              "subnet-018c55fd353f2a403",
              "subnet-0352648d35806d5e0"
            ],
            "tags": {
              "Name": "ALB App Tier"
            },
            "tags_all": {
              "Name": "ALB App Tier"
            },
            "vpc_id": "vpc-02ac493b0266f0f19",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.sgroup.aws_security_group.app_security_group",
            "module.vpc.aws_subnet.private-app-subnet-1",
            "module.vpc.aws_subnet.private-app-subnet-2",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_external_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:266735814394:loadbalancer/app/Web-external-load-balancer/9f6a3b5895d415a2",
            "arn_suffix": "app/Web-external-load-balancer/9f6a3b5895d415a2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Web-external-load-balancer-2013545871.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:266735814394:loadbalancer/app/Web-external-load-balancer/9f6a3b5895d415a2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Web-external-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08b7965e6e3f0ec7f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b218d4e67df694db"
              },
              {
                "subnet_id": "subnet-0c71fa7833bfc03bc"
              }
            ],
            "subnets": [
              "subnet-0b218d4e67df694db",
              "subnet-0c71fa7833bfc03bc"
            ],
            "tags": {
              "Name": "ALB Web Tier"
            },
            "tags_all": {
              "Name": "ALB Web Tier"
            },
            "vpc_id": "vpc-02ac493b0266f0f19",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.sgroup.aws_security_group.web_security_group",
            "module.vpc.aws_subnet.public-web-subnet-1",
            "module.vpc.aws_subnet.public-web-subnet-2",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:266735814394:listener/app/App-internal-load-balancer/2e0d5cbee1c1ff72/8951213003ba14a3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:266735814394:targetgroup/App-internal-load-balancer-tg/6d3104b851c14b8c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:266735814394:listener/app/App-internal-load-balancer/2e0d5cbee1c1ff72/8951213003ba14a3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:266735814394:loadbalancer/app/App-internal-load-balancer/2e0d5cbee1c1ff72",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.app_internal_lb",
            "module.alb.aws_lb_target_group.app_lb_attaching",
            "module.sgroup.aws_security_group.app_security_group",
            "module.vpc.aws_subnet.private-app-subnet-1",
            "module.vpc.aws_subnet.private-app-subnet-2",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_lb_attaching",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:266735814394:targetgroup/App-internal-load-balancer-tg/6d3104b851c14b8c",
            "arn_suffix": "targetgroup/App-internal-load-balancer-tg/6d3104b851c14b8c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:266735814394:targetgroup/App-internal-load-balancer-tg/6d3104b851c14b8c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "App-internal-load-balancer-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ABL attatch App tier"
            },
            "tags_all": {
              "Name": "ABL attatch App tier"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02ac493b0266f0f19"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_attaching_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:266735814394:targetgroup/Web-external-load-balancer-tg/bad14f365cbdeab2",
            "arn_suffix": "targetgroup/Web-external-load-balancer-tg/bad14f365cbdeab2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:266735814394:targetgroup/Web-external-load-balancer-tg/bad14f365cbdeab2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Web-external-load-balancer-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ABL attatch web tier"
            },
            "tags_all": {
              "Name": "ABL attatch web tier"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02ac493b0266f0f19"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PrivateAppTemplat-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fd334507439f4d1",
            "arn": "arn:aws:ec2:eu-west-1:266735814394:instance/i-0709f77fe27f59c5a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0709f77fe27f59c5a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vagrant-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c80aad89b73556be",
            "private_dns": "ip-10-0-3-143.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09fd767cb0fb686da",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00b7454e56d0919c8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018c55fd353f2a403",
            "tags": {
              "Name": "PrivateAppTemplat-1"
            },
            "tags_all": {
              "Name": "PrivateAppTemplat-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b7454e56d0919c8"
            ]
          },
          "dependencies": [
            "module.sgroup.aws_security_group.app_security_group",
            "module.vpc.aws_subnet.private-app-subnet-1",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PublicWebTemplat-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fd334507439f4d1",
            "arn": "arn:aws:ec2:eu-west-1:266735814394:instance/i-0f61c528dca4c6c51",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f61c528dca4c6c51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vagrant-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c38758811d6e06a",
            "private_dns": "ip-10-0-1-130.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.130",
            "public_dns": "ec2-52-213-131-3.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.213.131.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c6ac69fe0d9c463a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-08b7965e6e3f0ec7f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c71fa7833bfc03bc",
            "tags": {
              "Name": "PublicWebTemplat-1"
            },
            "tags_all": {
              "Name": "PublicWebTemplat-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08b7965e6e3f0ec7f"
            ]
          },
          "dependencies": [
            "module.sgroup.aws_security_group.web_security_group",
            "module.vpc.aws_subnet.public-web-subnet-1",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.sgroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:266735814394:security-group/sg-00b7454e56d0919c8",
            "description": "Enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b7454e56d0919c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh-access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow ICMP (ping) from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "ALB Security Group",
            "name_prefix": "",
            "owner_id": "266735814394",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PrivateApp Layer Security Group"
            },
            "tags_all": {
              "Name": "PrivateApp Layer Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ac493b0266f0f19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.sgroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:266735814394:security-group/sg-07c35ad331cbb3aef",
            "description": "Enable MYSQL access on port 3306",
            "egress": [],
            "id": "sg-07c35ad331cbb3aef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Postgres Access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "DB Server S",
            "name_prefix": "",
            "owner_id": "266735814394",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database Security Group"
            },
            "tags_all": {
              "Name": "Database Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ac493b0266f0f19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.sgroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:266735814394:security-group/sg-08b7965e6e3f0ec7f",
            "description": "Enable shh on port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b7965e6e3f0ec7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh-access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web Layer SG Access",
            "name_prefix": "",
            "owner_id": "266735814394",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PublicWeb Security group"
            },
            "tags_all": {
              "Name": "PublicWeb Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ac493b0266f0f19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061a2696a95f0497b",
            "arn": "arn:aws:ec2:eu-west-1:266735814394:elastic-ip/eipalloc-061a2696a95f0497b",
            "domain": "vpc",
            "id": "eipalloc-061a2696a95f0497b",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-155-255-191.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.155.255.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip1"
            },
            "tags_all": {
              "Name": "nat-eip1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:266735814394:internet-gateway/igw-0469916dd1186d86e",
            "id": "igw-0469916dd1186d86e",
            "owner_id": "266735814394",
            "tags": {
              "Name": "vpc-igw"
            },
            "tags_all": {
              "Name": "vpc-igw"
            },
            "vpc_id": "vpc-02ac493b0266f0f19"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061a2696a95f0497b",
            "association_id": "eipassoc-06b73853466c78e35",
            "connectivity_type": "public",
            "id": "nat-02952c44b817f6c04",
            "network_interface_id": "eni-0a938003ea5d74727",
            "private_ip": "10.0.2.41",
            "public_ip": "54.155.255.191",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b218d4e67df694db",
            "tags": {
              "Name": "Nat 1 with eip"
            },
            "tags_all": {
              "Name": "Nat 1 with eip"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_subnet.public-web-subnet-2",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:266735814394:route-table/rtb-0332fd5223178cae7",
            "id": "rtb-0332fd5223178cae7",
            "owner_id": "266735814394",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02952c44b817f6c04",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ac493b0266f0f19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_nat_gateway.nat_1",
            "module.vpc.aws_subnet.public-web-subnet-2",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:266735814394:route-table/rtb-0c181528a14e87a7a",
            "id": "rtb-0c181528a14e87a7a",
            "owner_id": "266735814394",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0469916dd1186d86e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ac493b0266f0f19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0235ebd8228956189",
            "route_table_id": "rtb-0332fd5223178cae7",
            "subnet_id": "subnet-018c55fd353f2a403"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_nat_gateway.nat_1",
            "module.vpc.aws_route_table.private-route-table",
            "module.vpc.aws_subnet.private-app-subnet-1",
            "module.vpc.aws_subnet.public-web-subnet-2",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_route_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c716107e99351ce5",
            "route_table_id": "rtb-0332fd5223178cae7",
            "subnet_id": "subnet-0352648d35806d5e0"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_nat_gateway.nat_1",
            "module.vpc.aws_route_table.private-route-table",
            "module.vpc.aws_subnet.private-app-subnet-2",
            "module.vpc.aws_subnet.public-web-subnet-2",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_route_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ff103b4f6569d33",
            "route_table_id": "rtb-0332fd5223178cae7",
            "subnet_id": "subnet-084f48e5f00d3a282"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_nat_gateway.nat_1",
            "module.vpc.aws_route_table.private-route-table",
            "module.vpc.aws_subnet.private-db-subnet-1",
            "module.vpc.aws_subnet.public-web-subnet-2",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_route_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5e78923226da17e",
            "route_table_id": "rtb-0332fd5223178cae7",
            "subnet_id": "subnet-0fda5f1a159e35384"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_nat_gateway.nat_1",
            "module.vpc.aws_route_table.private-route-table",
            "module.vpc.aws_subnet.private-db-subnet-2",
            "module.vpc.aws_subnet.public-web-subnet-2",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037be20a599d23250",
            "route_table_id": "rtb-0c181528a14e87a7a",
            "subnet_id": "subnet-0c71fa7833bfc03bc"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public-web-subnet-1",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09eae2128dd932f58",
            "route_table_id": "rtb-0c181528a14e87a7a",
            "subnet_id": "subnet-0b218d4e67df694db"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public-web-subnet-2",
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-app-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:266735814394:subnet/subnet-018c55fd353f2a403",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018c55fd353f2a403",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "266735814394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1 | APP TIER"
            },
            "tags_all": {
              "Name": "Private Subnet 1 | APP TIER"
            },
            "vpc_id": "vpc-02ac493b0266f0f19"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-app-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:266735814394:subnet/subnet-0352648d35806d5e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0352648d35806d5e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "266735814394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2 | APP TIER"
            },
            "tags_all": {
              "Name": "Private Subnet 2 | APP TIER"
            },
            "vpc_id": "vpc-02ac493b0266f0f19"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:266735814394:subnet/subnet-084f48e5f00d3a282",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084f48e5f00d3a282",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "266735814394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private DB subnet 1 | DB TIER"
            },
            "tags_all": {
              "Name": "Private DB subnet 1 | DB TIER"
            },
            "vpc_id": "vpc-02ac493b0266f0f19"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:266735814394:subnet/subnet-0fda5f1a159e35384",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fda5f1a159e35384",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "266735814394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private DB subnet 2 | DB TIER"
            },
            "tags_all": {
              "Name": "Private DB subnet 2 | DB TIER"
            },
            "vpc_id": "vpc-02ac493b0266f0f19"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-web-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:266735814394:subnet/subnet-0c71fa7833bfc03bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c71fa7833bfc03bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "266735814394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1 | WEB TIER"
            },
            "tags_all": {
              "Name": "Public Subnet 1 | WEB TIER"
            },
            "vpc_id": "vpc-02ac493b0266f0f19"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-web-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:266735814394:subnet/subnet-0b218d4e67df694db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b218d4e67df694db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "266735814394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2 | WEB TIER"
            },
            "tags_all": {
              "Name": "Public Subnet 2 | WEB TIER"
            },
            "vpc_id": "vpc-02ac493b0266f0f19"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:266735814394:vpc/vpc-02ac493b0266f0f19",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04d23eda90040612e",
            "default_route_table_id": "rtb-0f3b50967d5f9ebde",
            "default_security_group_id": "sg-03bc1c7a0e69eeea6",
            "dhcp_options_id": "dopt-07e207ebc3fc45a84",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ac493b0266f0f19",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f3b50967d5f9ebde",
            "owner_id": "266735814394",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}